# nonebot_plugin_SimpleToWrite

./: .pdm-python  LICENSE  README.md  pyproject.toml
nonebot_plugin_SimpleToWrite/: __init__.py  config.py
nonebot_plugin_SimpleToWrite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nonebot_plugin_SimpleToWrite/help/: help.py
nonebot_plugin_SimpleToWrite/livedm/bllichat/: sample.py  send_ruler.py
nonebot_plugin_SimpleToWrite/livedm/bllichat/blivedm/: handlers.py
nonebot_plugin_SimpleToWrite/livedm/bllichat/blivedm/clients/: web.py  ws_base.py
nonebot_plugin_SimpleToWrite/livedm/bllichat/blivedm/models/: web.py
nonebot_plugin_SimpleToWrite/teach/: teach.py
nonebot_plugin_SimpleToWrite/teach/教学文件/变量大全/: 文字.txt
nonebot_plugin_SimpleToWrite/teach/教学文件/变量大全-[戳一戳]/: 文字.txt
nonebot_plugin_SimpleToWrite/teach/教学文件/变量大全-asif 比较式/: 文字.txt
nonebot_plugin_SimpleToWrite/teach/教学文件/变量大全-geturl/: 文字.txt
nonebot_plugin_SimpleToWrite/teach/教学文件/变量大全-sendtext  发送文本/: 文字.txt
